<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE7D9"
    tools:context=".ui.passwordrecovery.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#4C8C8C"
        android:contentDescription="@string/close" />

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="60dp"
        android:layout_height="93dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock_turquesa_img"
        app:tint="#4C8C8C" />

    <TextView
        android:id="@+id/title_forgot_password"
        android:layout_width="281dp"
        android:layout_height="174dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textColor="@color/turquesa_apagado"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_icon" />

    <TextView
        android:id="@+id/subtitle_instructions"
        android:layout_width="189dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_password_instructions"
        android:textAlignment="center"
        android:textColor="#607D8B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_forgot_password" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_green_section"
        android:layout_width="417dp"
        android:layout_height="450dp"
        android:layout_marginTop="436dp"
        android:background="@drawable/backgreenrevers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_phone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/n_mero_de_celular"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_green_section" />

        <EditText
            android:id="@+id/input_phone_forgot"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_border"
            android:drawableStart="@drawable/phone_white"
            android:drawablePadding="10dp"
            android:hint="@string/hint_phone_forgot"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_number_label" />

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_reset_password_background"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/reset_password"
            android:textColor="@color/turquesa_apagado"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_phone_forgot" />

        <TextView
            android:id="@+id/text_view_back_to_login"
            android:layout_width="152dp"
            android:layout_height="37dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="288dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_green_section" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>