<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg_image_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085"
            app:srcCompat="@drawable/fondo"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_image_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.162"
            app:layout_constraintWidth_percent="0.8"
            app:srcCompat="@drawable/imagebmis"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/plane_image"
            android:layout_width="175dp"
            android:layout_height="105dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:adjustViewBounds="true"
            android:contentDescription="@string/plane_image_desc"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:srcCompat="@drawable/plane" />

        <TextView
            android:id="@+id/title_bmis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/bmis_title"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:textSize="@dimen/text_size_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image" />

        <TextView
            android:id="@+id/subtitle_control_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:fontFamily="@font/montserrat"
            android:text="@string/control_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bmis" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/input_horizontal_margin"
            android:layout_marginEnd="@dimen/input_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/icon"
            android:autofillHints="phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:paddingStart="@dimen/input_padding_start"
            android:paddingEnd="@dimen/input_padding_end"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_control_app" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/input_horizontal_margin"
            android:layout_marginEnd="@dimen/input_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/lock"
            android:autofillHints="password"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="@dimen/input_padding_start"
            android:paddingEnd="@dimen/input_padding_end"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_phone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/remember_forgot_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password">

            <CheckBox
                android:id="@+id/checkboxRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:buttonTint="@color/checkbox_color"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/new_user_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/new_user_signup"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remember_forgot_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogbkg"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/line"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/myButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@drawable/button_border"
            android:elevation="8dp"
            android:text="@string/access"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
