<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE7D9"
    tools:context=".ui.passwordrecovery.ResetPasswordActivity"> <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/top_green_section"
    android:layout_width="417dp"
    android:layout_height="265dp"
    android:background="@drawable/backgreen"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.4"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_arrow"
        android:rotation="180"
        android:src="@drawable/salir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="269dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="start"
        android:letterSpacing="-0.02"
        android:text="@string/reset_password_title_final"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/input_new_password"
        android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/ic_lock_green"
        android:drawablePadding="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_green_section" />

    <EditText
        android:id="@+id/input_confirm_new_password" android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp" android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/ic_lock_green"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_new_password" android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_password" />

    <Button
        android:id="@+id/button_set_new_password"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_border"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/set_new_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>